Fix comment body breaks when work too long

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,7 @@
     max-width: 100%;
   }
 }
+
+.media-body {
+  word-break: break-word;
+}
